--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9f81f6b2-d7f3-4cc2-b09b-cf3a627c7b0f",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a869c2d-ae51-47d3-8a41-bfcf5e505f59",
    "metadata": {},
    "source": [
     "# Advanced Techniques for QAOA\n",
@@ -21,6 +23,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea97567d-810f-4cca-8edf-a47d70ea870a",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -37,6 +40,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40fb546e-85e0-450b-a5ea-5d08950d129f",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -50,6 +54,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50285e5f-1a7b-471c-a223-1ae0af19d9ed",
    "metadata": {},
    "source": [
     "## Setup"
@@ -58,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d019ea68-61e0-4341-84c7-e612ca10dde7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +99,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b77b0c9-f5a6-476e-86b8-069ba14f9ab3",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -111,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d19a5086-a858-45e1-b60b-f31db350e9d9",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -127,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c989c08a-1e79-4059-b9d7-12651909b3bb",
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e39c4e42-ce97-4a04-8879-da4d33a684bc",
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +214,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf94748d-25b2-47bc-8e65-8504dee843b6",
    "metadata": {},
    "source": [
     "### Hamiltonian &rarr; quantum circuit"
@@ -212,6 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ff1859a-7487-4113-b8d7-1342cd6bf527",
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +247,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e576068-53e7-4a06-a83b-87e95de141e9",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
@@ -247,6 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c54402a-7696-4b0e-826a-6e0ac4c54395",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +288,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba53fd1d-0d68-43e3-9102-4c6e64f04de7",
    "metadata": {},
    "source": [
     "#### Remap the graph using a SAT mapper\n",
@@ -288,6 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "df9d861a-64e8-49ee-aed1-c41f437fa743",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,6 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e689e09e-6ca7-4154-8602-d1d954ebe80b",
    "metadata": {},
    "outputs": [
     {
@@ -545,6 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "ecf6e8c3-65c2-4430-8dd3-d67b8842045d",
    "metadata": {},
    "outputs": [
     {
@@ -577,6 +595,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ae531be-80eb-4acd-b84a-7d466fd872e7",
    "metadata": {},
    "source": [
     "#### Build a QAOA circuit with the SWAP strategy and the SAT mapping\n",
@@ -590,6 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "57d5eb53-9cda-4c38-a00b-26ed4b533bcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,6 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "25db3ad8-0666-42f9-8569-544f89d99391",
    "metadata": {},
    "outputs": [
     {
@@ -786,6 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7793ef92-ce59-4fd7-b43f-48d4e3427e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,6 +825,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "82ae28b3-85eb-4487-8100-1e622e93cccf",
    "metadata": {},
    "outputs": [
     {
@@ -829,6 +852,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2afd1a7-0980-433b-a3a8-303d7e7718b1",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit primitives\n",
@@ -843,6 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e4745d4-df78-4ec6-b390-549ee91bba20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,6 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "e6794cf3-7fbe-46a5-bdc0-5faad1235365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,6 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c5e5f7a4-01f6-4a02-9114-3bb0e24be1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,6 +1022,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63fa2ab4-5354-4022-ab46-e9bbf73870de",
    "metadata": {},
    "source": [
     "The CVaR can be used as an error mitigation technique as previously discussed [\\[4\\]](#references). In this example, we determine $\\alpha$ and the number of shots according to the circuit's error rate."
@@ -1003,6 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "032bf312-4bf4-40f4-81f0-2ae8a719b98b",
    "metadata": {},
    "outputs": [
     {
@@ -1039,6 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e608d54-60ee-4a63-91f7-aace7c036694",
    "metadata": {},
    "outputs": [
     {
@@ -1112,6 +1142,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1d190fa4-3bbe-412a-b296-6dddd3ad2b12",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result in desired classical format"
@@ -1120,6 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "761821cb-9a0c-4efb-806b-75513302d34a",
    "metadata": {},
    "outputs": [
     {
@@ -1151,6 +1183,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38aadfcb-aec9-4dbb-a9d3-319239eae196",
    "metadata": {},
    "source": [
     "The following graph is the result of the standard expectation value."
@@ -1159,6 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "7e8af29e-c99b-41f2-b6dd-2be471e1af21",
    "metadata": {},
    "outputs": [
     {
@@ -1186,6 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ea9e6aa-4297-4687-b484-1695d415bad5",
    "metadata": {},
    "outputs": [
     {
@@ -1225,6 +1260,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5879546-35ab-4876-bed9-262b85f130cc",
    "metadata": {},
    "source": [
     "Finally, let's draw a graph based on the CVaR result.\n",
@@ -1236,6 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "852dfeed-2871-4ca1-9754-15c95293198e",
    "metadata": {},
    "outputs": [
     {
@@ -1263,6 +1300,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "82f5c13b-a141-4657-adfd-bb18e88ad9f2",
    "metadata": {},
    "source": [
     "## References\n",
@@ -1278,6 +1316,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c048cd84-d6e8-4b8a-926e-a7f7724a86e2",
    "metadata": {},
    "source": [
     "## Tutorial survey\n",
@@ -1289,6 +1328,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d325feb7-b9c5-4e6a-b1ee-93e5f96213cb",
    "metadata": {},
    "source": [
     "© IBM Corp. 2025"
@@ -1298,7 +1338,7 @@
  "metadata": {
   "description": "This notebook introduces advanced techniques to improve the performance of the Quantum Approximate Optimization Algorithm (QAOA) with a large number of qubits.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1312,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "Advanced Techniques for QAOA"
