--- a/learning/courses/quantum-computing-in-practice/coming-soon-mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/coming-soon-mapping.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "Let’s address the first question, which is at the heart of many of the difficulties with understanding mapping: What can a qubit represent?\n",
     "\n",
-    "![What can a qubit represent?](images/qubitscanbe.png)\n",
+    "![What can a qubit represent?](/learning/images/courses/quantum-computing-in-practice/coming-soon-mapping/qubitscanbe.avif)\n",
     "\n",
     "Qubits can be used to represent many things. The first, and perhaps simplest, is a node on a graph. Graphs are used to show connectivity in many different types of mathematical problems, and the nodes are a fundamental element representing a point or entity within a network. Depending on what the whole network represents, that could be a city, a person, or a ferromagnet in a lattice.\n",
     "\n",
@@ -70,7 +70,7 @@
     "\n",
     "The protein chain is represented as a series of turns or directions on this lattice. Each turn between amino acids can be in one of four directions, corresponding to edges of the tetrahedron. These four possible turns are encoded using four qubits into the states `0001`, `0010`, `0100`, or `1000`.\n",
     "\n",
-    "![Amino acid chain on a tetrahedral lattice](images/10.3.png)\n",
+    "![Amino acid chain on a tetrahedral lattice](/learning/images/courses/quantum-computing-in-practice/coming-soon-mapping/10.3.avif)\n",
     "\n",
     "Let’s look at an example in the figure above. Let’s place our first amino acid on the point labelled “B” circled in red in our tetrahedral lattice. The direction to the first amino acid to the second is arbitrary because the system can always be rotated to make that edge point in any direction we like. So, we can place our second amino acid on the point below the first labelled “A”. It’s not as easy to see, but the path from the second to the third is also arbitrary. All three choices would result in our having two edges with an angle of approximately 109.5 degrees between them. Picking this second edge simply determines the orientation of our protein in space. So, without loss of generality, we can choose the first two turns to just be`0001` and `0010`.\n",
     "\n",
@@ -130,7 +130,7 @@
     "\n",
     "It may not be obvious, but we’re actually done with the mapping stage by doing this.  the states of the qubits indicate the “turn” of the protein at each lattice site, and the collection of turns determines the distance between any pair of amino acids. Pairs of various species of amino acids have different interactions, some attractive, some repulsive. If you are using the configuration and distances to merely determine if known amino acid interactions are “on” or “off”, the strengths of these have already been worked out and can simply be looked up in a table like this:\n",
     "\n",
-    "![Binding energies of amino acids](images/bindingenergies.png)\n",
+    "![Binding energies of amino acids](/learning/images/courses/quantum-computing-in-practice/coming-soon-mapping/bindingenergies.avif)\n",
     "\n",
     "In summary, in this example, the qubits are used to mark steps in a path along a lattice, which together, form a chain of amino acids. By simulating how they bend and fold we can hopefully find better outcomes in medical research.\n",
     "We skipped how to calculate a few terms of this Hamiltonian because they were hyper-specific to this problem, while defining directions on a lattice can be applied more generally. Now once you have a general Hamiltonian, you are always going to want to translate that into Pauli operators, which are native to the quantum computer. That’s what we’ll discuss next.\n",
