--- a/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
+++ b/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
@@ -59,13 +59,13 @@
     "\n",
     "Gates are represented by different symbols on the wires of the involved qubit(s). Single-qubit gates — like a Hadamard gate, depicted below (the box with the H) — affect only the qubit whose wire it's placed on. Multi-qubit gates — like a CNOT gate, also shown below (the plus sign in the circle with a line connected to q0) — affect two or more qubits. In the depicted CNOT gate, the state of the q1 changes according to the state of q0. After all the gates are performed, we can measure the qubits, indicated by the black gates with the measurement symbol. The outcomes of the measurements are written onto classical registers, the double-lined “meas” bus below.\n",
     "\n",
-    "![Example simple quantum circuit](images/simplecircuit.png)\n",
+    "![Example simple quantum circuit](/learning/images/courses/quantum-computing-in-practice/running-quantum-circuits/simplecircuit.avif)\n",
     "\n",
     "One important characteristic of a circuit is its depth. The depth of a quantum circuit is the minimum number of “layers” of quantum gates, executed in parallel, required to complete the circuit. Quantum gates can be executed in parallel (at the same time) whenever they don't have any qubits in common. But if two or more gates act of the same qubit then we can't perform them in parallel — they must be performed in two separate layers, one after the other.\n",
     "\n",
     "There's another, less obvious, way to determine the depth of a circuit, by playing a sort of game. The rules are simple: starting from any qubit wire on the left, you must travel to the right and count the number of gates you encounter in your path. You may hop to a neighboring wire only when it is connected to your current wire by a multi-qubit gate. The goal is to maximize the number of gates you encounter along your path. This maximal number also happens to be the depth of the circuit.\n",
     "\n",
-    "![Example nine-layer circuit](images/circuitdepth.png)\n",
+    "![Example nine-layer circuit](/learning/images/courses/quantum-computing-in-practice/running-quantum-circuits/circuitdepth.avif)\n",
     "\n",
     "Because quantum gates take time to implement, the depth of a circuit roughly corresponds to the amount of time needed for a quantum computer to execute the circuit. Some machines are better suited for large depth circuits than others due to the decoherence times of the qubits on the processor. So, we need to know the depth of a circuit to know if it can be run on a particular device.\n",
     "\n",
