--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "The first step is to create our graph by defining the number of nodes and the edges that connect two nodes. You can do this by importing a package called `rustworkx`, as demonstrated in the tutorial. The result will be a graph that looks like this:\n",
     "\n",
-    "![Output of Rustworkx Max-Cut graph](images/rustworxMaxCut.png)\n",
+    "![Output of Rustworkx Max-Cut graph](/learning/images/courses/quantum-computing-in-practice/utility-scale-qaoa/rustworxMaxCut.avif)\n",
     "\n",
     "\n",
     "We'll use the Qiskit patterns framework to find the Max-Cut solutions for this graph on our quantum computer.\n",
@@ -172,7 +172,7 @@
     "\n",
     "Back to the optimization problem. We need to find better values of gamma and beta than just our rough first guesses. We will do this by plugging in our cost function and these initial guesses into a scipy optimizer `COBYLA`.\n",
     "\n",
-    "![COBYLA optimization graph](images/COBYLA.png)\n",
+    "![COBYLA optimization graph](/learning/images/courses/quantum-computing-in-practice/utility-scale-qaoa/COBYLA.avif)\n",
     "\n",
     "Here you can see the value of the cost function over the iterations. It starts off a little wonky and goes up and down, but then settles to a low value. We will use the values that scipy found that correspond to the lowest evaluation of the cost function.\n",
     "\n",
@@ -184,14 +184,14 @@
     "\n",
     "Now let's plot a histogram of the data to look at the final solution:\n",
     "\n",
-    "![Max-Cut solution histogram](images/MaxcutHistogram.png)\n",
+    "![Max-Cut solution histogram](/learning/images/courses/quantum-computing-in-practice/utility-scale-qaoa/MaxcutHistogram.avif)\n",
     "\n",
     "The bit strings represent how each of the nodes were partitioned into two groups (labelled “0” and “1”) by the cut. There should be four solutions that all give the maximum value of edges cut. These four are shown in purple. You can see right away that 4 solutions are much more probable than any of the others. The highest, and thus most probable bit string solution is 0,1,0,1,1. (Remember – the order of the qubits is reversed in the plot bitstrings!)\n",
     "\n",
     "\n",
     "From this plot, we can take the most likely bitstring and represent it as a partitioned graph, with the cut going through five edges:\n",
     "\n",
-    "![Max-Cut solution](images/MaxCutsolution.png)\n",
+    "![Max-Cut solution](/learning/images/courses/quantum-computing-in-practice/utility-scale-qaoa/MaxCutsolution.avif)\n",
     "\n",
     "So, this is indeed a Max-Cut solution. But it's not the only one! Because of the symmetry of this graph, there are multiple correct solutions. Instead of having the nodes 0 and 3 be inside the cut, we could have nodes 2 and 4 be included. You can see that all I had to do was rotate my cut to include these new points. The number of edges cut remains five. There turns out to be four max cut solutions, since each of the two solutions we noted also has an “opposite” partner, where the purple nodes are grey and the grey nodes are purple – so the cut remains the same, but each node effectively swaps to the opposite side of the partition.\n",
     "\n",
