--- a/learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for.ipynb
+++ b/learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "- BQP, or bounded-error quantum polynomial problems. This is the quantum equivalent of BPP: It is the class of decision problems solvable by a quantum computer in polynomial time with a small chance of error.\n",
     "\n",
-    "![Suspected relationships among complexity classes](images/complexity_classes.png)\n",
+    "![Suspected relationships among complexity classes](/learning/images/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for/complexity_classes.avif)\n",
     "\n",
     "All these classes live in a larger class we call PSPACE. Above is a diagram of the suspected relationships among some of the complexity classes, but this is very hard to definitively prove mathematically. You'll notice that BQP does not necessarily overlap with NP-complete. But you might have still seen some quantum computing approaches that aim to try to solve problems in NP-complete.\n",
     "\n",
@@ -89,7 +89,7 @@
     "The experiment was run on an IBM Quantum Heron device and included a few different types of error mitigation and suppression: dynamical decoupling, zero noise extrapolation, Pauli twirling, and a recently developed technique called operator decoherence renormalization.\n",
     "\n",
     "\n",
-    "![Results of hadron simulations](images/hadron_paper.png)\n",
+    "![Results of hadron simulations](/learning/images/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for/hadron_paper.avif)\n",
     "\n",
     "\n",
     "Above is a figure from the paper showing the observable of interest, the chiral condensate, which is basically a superfluid phase of the hadrons. Now, we can see the wavepacket at the center of the sites that have been designated to run this experiment. The black lines are the error-free results from the (computationally expensive) classical simulation, while the points with error bars are the results from the 133-qubit IBM quantum computer, Torino.\n",
@@ -116,7 +116,7 @@
     "\n",
     "So, when the experiment was performed, the authors chose to run the algorithm on the 127-qubit IBM Quantum computer Brisbane. Below is a figure showing the 8th iteration of the optimization algorithm for a nearest-neighbor, randomly generated spin-glass instance on 100 qubits. They compare idealized classical simulation results from DCQO and BF-DCQO, as well as the experimental result run on the quantum computer. They also show the result from a classical solver called Gurobi as a reference. With just 10 iterations, BF-DCQO provides a drastic enhancement compared to DCQO. Although the experimental result is a bit different than the ideal result due to noise, the performance is still better than the ideal DCQO. This shows that there is still a lot of excellent progress being made with regards to quantum optimization and good results are being reported on over 100 qubits for one of the first times.\n",
     "\n",
-    "![Results from Ising spin-glass paper](images/paper_results.png)\n",
+    "![Results from Ising spin-glass paper](/learning/images/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for/paper_results.avif)\n",
     "\n",
     "\n",
     "### Use Case 3: mRNA secondary structure prediction\n",
@@ -125,7 +125,7 @@
     "\n",
     "First, a brief refresher on mRNA. Messenger RNA is a type of RNA involved in protein synthesis. It basically reads instructions given by DNA. The secondary structure of mRNA is how the chain is folded, as shown in the diagram below. And the RNA secondary structure prediction problem is the problem of finding the most stable folding of the sequence of bases or nucleotides that make up RNA: adenine (A), cytosine (C), uracil (U), and guanine (G). The image below shows some common folding structures found in mRNA, each color represents a different type of secondary structure. What makes one structure more favorable than the others isn't well understood; all we can do is calculate which structure yields the lowest free energy compared to the unfolded state. And that's where quantum computers come in.\n",
     "\n",
-    "![Diagram of mRNA secondary structure](images/mrna_structure.png)\n",
+    "![Diagram of mRNA secondary structure](/learning/images/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for/mrna_structure.avif)\n",
     "\n",
     "So, why are mRNA secondary structures important? Accurate prediction of them is crucial to not only understanding DNA and our genes, but also for designing RNA-based therapeutics, like the COVID-19 vaccine.\n",
     "\n",
@@ -133,7 +133,7 @@
     "\n",
     "This experiment was performed using something called the conditional value at risk variational quantum eigensolver, which is a modification of a traditional VQE algorithm and is expected to achieve better convergence.\n",
     "\n",
-    "![Results from mRNA paper](images/mrna_paper.png)\n",
+    "![Results from mRNA paper](/learning/images/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for/mrna_paper.avif)\n",
     "\n",
     "\n",
     "The plot above shows the distribution of measurement probabilities of the sampled bitstrings, with the corresponding energies for a 42-nucleotide, 80-qubit instance. Here, the bitstrings symbolize pairings of nucleotides. It illustrates that the lowest energy bitstring found by the quantum computer matches that of the comparative classical solver, so that is great. Also shown is the optimal folded structure of that nucleotide chain based on the lowest energy bitstring the quantum computer found.\n",
