Update with new titles

--- a/docs/tutorials/heisenberg-chain.ipynb
+++ b/docs/tutorials/heisenberg-chain.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Heisenberg chain\n",
+    "# Ground state energy estimation of the Heisenberg chain with VQE\n",
     "*Usage estimate: 2 minutes on IBM Cusco (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
@@ -428,7 +428,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "Heisenberg chain"
+  "title": "Ground state energy estimation of the Heisenberg chain with VQE"
  },
  "nbformat": 4,
  "nbformat_minor": 5
