--- a/docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb
+++ b/docs/tutorials/pauli-correlation-encoding-for-qaoa.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore setminus coloneqq rbrack  // latex that isn't being ignored for some reason */}\n",
     "\n",
-    "# Solving Maxcut with Reduced Qubit Requirements Using Pauli Correlation Encoding\n",
+    "# Pauli Correlation Encoding to reduce Maxcut requirements\n",
     "\n",
     "*Usage estimate: 30 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
@@ -729,7 +729,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "Solving Maxcut with Reduced Qubit Requirements Using Pauli Correlation Encoding"
+  "title": "Pauli Correlation Encoding to reduce Maxcut requirements"
  },
  "nbformat": 4,
  "nbformat_minor": 4
