--- a/docs/tutorials/krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/krylov-quantum-diagonalization.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore prefactors */}\n",
     "\n",
-    "# Diagonalization of large many-body Hamiltonians on a quantum processor\n",
+    "# Krylov quantum diagonalization of lattice Hamiltonians\n",
     "*Usage estimate: 20 minutes on IBM Fez (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
@@ -1638,7 +1638,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "Diagonalization of large many-body Hamiltonians on a quantum processor\n"
+  "title": "Krylov quantum diagonalization of lattice Hamiltonians\n"
  },
  "nbformat": 4,
  "nbformat_minor": 4
