--- a/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
+++ b/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore edgecolor */}\n",
     "\n",
-    "# Scaling Periodic Boundary Problems with Circuit Cutting\n",
+    "# Circuit cutting for periodic boundary conditions\n",
     "*Usage estimate: 2 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
@@ -996,7 +996,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "Scaling Periodic Boundary Problems with Circuit Cutting\n"
+  "title": "Circuit cutting for periodic boundary conditions\n"
  },
  "nbformat": 4,
  "nbformat_minor": 5
