--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore hivqe mcscf CASCI */}\n",
     "\n",
-    "# Compute Dissociation PES curve for Li2S (20Q) and FeP-NO (44Q) with Qunova HiVQE"
+    "# Dissociation PES curves with Qunova HiVQE"
    ]
   },
   {
@@ -1121,7 +1121,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "Compute Dissociation PES curve for Li2S (20Q) and FeP-NO (44Q) with Qunova HiVQE"
+  "title": "Dissociation PES curves with Qunova HiVQE"
  },
  "nbformat": 4,
  "nbformat_minor": 5
