--- a/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
+++ b/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
@@ -17,7 +17,7 @@
    "id": "bc51e7bf-e582-49ba-93f8-035624d56ccf",
    "metadata": {},
    "source": [
-    "# Solve utility-scale quantum optimization problems\n",
+    "# Quantum approximate optimization algorithm\n",
     "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
@@ -1421,7 +1421,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "Solve utility-scale quantum optimization problems"
+  "title": "Quantum approximate optimization algorithm"
  },
  "nbformat": 4,
  "nbformat_minor": 5
