Replace iframes with ImageLinks

--- a/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
+++ b/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
@@ -8,8 +8,14 @@
    },
    "source": [
     "# Running quantum circuits\n",
-    "<iframe src=\"https://www.youtube.com/embed/NTplT4WnNbk\" loading=\"lazy\" width=\"800\" height=\"450\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen>\n",
-    "</iframe>\n",
+    "\n",
+    "<ImageLink\n",
+    "  title=\"Run Quantum Circuits with Qiskit Primitives\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/NTplT4WnNbk\"\n",
+    "  src=\"/learning/images/courses/quantum-computing-in-practice/running-quantum-circuits/youtube-thumbnail.avif\"\n",
+    "/>\n",
+    "\n",
     "\n",
     "## Lesson overview\n",
     "\n",
