--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -7,8 +7,14 @@
    "source": [
     "# Utility-scale QAOA\n",
     "\n",
-    "<iframe src=\"https://youtu.be/P3s7TIMIvZ0?si=BjqzrgN6Jui2DMFW\" loading=\"lazy\" width=\"800\" height=\"450\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen>\n",
-    "</iframe>\n",
+    "\n",
+    "<ImageLink\n",
+    "  title=\"Solving MaxCut with QAOA: Quantum Tutorial for 100+ Qubits\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/P3s7TIMIvZ0\"\n",
+    "  src=\"/learning/images/courses/quantum-computing-in-practice/utility-scale-qaoa/youtube-thumbnail.avif\"\n",
+    "/>\n",
+    "\n",
     "\n",
     "## Lesson overview:\n",
     "\n",
