--- a/learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for.ipynb
+++ b/learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for.ipynb
@@ -149,7 +149,7 @@
   }
  ],
  "metadata": {
-  "description": "Read about how we decide on the types of problems we think might benefit from a quantum solution, and look at some recent examples of work done in our community.",
+  "description": "Read about how we decide on the types of problems we think might benefit from a quantum solution, and look at some recent examples of work from the community.",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
