--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -5,6 +5,8 @@
    "id": "18a3d7ba-200a-42e0-ab18-9eb03999c1f6",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore Longleftrightarrow ZIZII */}\n",
+    "\n",
     "# Utility-scale QAOA\n",
     "\n",
     "\n",
