remove "omit backend" statement

--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -255,7 +255,7 @@
     "    primitive=\"estimator\",\n",
     "    pubs=estimator_pubs,\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_fez\", or omit to default to the least busy device\n",
+    "    backend_name=backend_name,\n",
     ")"
    ]
   },
@@ -496,7 +496,7 @@
     "    primitive=\"sampler\",\n",
     "    pubs=sampler_pubs,\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # Such as \"ibm_fez\", or omit to default to the least busy device\n",
+    "    backend_name=backend_name,\n",
     ")"
    ]
   },
