--- a/docs/guides/visualize-results.ipynb
+++ b/docs/guides/visualize-results.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1adb4ac8-f331-485b-89f5-e4ec20a6855f",
    "metadata": {},
    "source": [
     "# Visualize results"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6efd5b06-c754-4b34-a14d-e404c9e920cb",
    "metadata": {
     "tags": [
      "version-info"
@@ -30,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b446771a-caf4-4b59-8e8c-1d115249b818",
    "metadata": {},
    "source": [
     "## Plot histogram <a name='histogram'></a>\n",
@@ -50,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "03592c4f-8a0a-4c0b-81f6-658f57d33ee4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "2ff2c2d1-185f-4183-b80a-b5b599411245",
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "3b41d6da-1bca-4b82-ac84-b5b811b7d430",
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +124,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "330e0fcb-ce13-4ad2-855e-4e0b8665cf76",
    "metadata": {},
    "source": [
     "### Options when plotting a histogram\n",
@@ -135,6 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "7f456bcc-94a8-4522-9be2-77ea91045c1f",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +166,10 @@
     "\n",
     "# Plot results with custom options\n",
     "plot_histogram(\n",
-    "    [result[0].data.meas.get_counts(), second_result[0].data.meas.get_counts()],\n",
+    "    [\n",
+    "        result[0].data.meas.get_counts(),\n",
+    "        second_result[0].data.meas.get_counts(),\n",
+    "    ],\n",
     "    legend=[\"first\", \"second\"],\n",
     "    sort=\"desc\",\n",
     "    figsize=(15, 12),\n",
@@ -169,6 +180,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a3d185d-96ce-4a91-890f-b8e3d7f31eb0",
    "metadata": {},
    "source": [
     "## Plotting estimator results\n",
@@ -181,6 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "35e07a46-8423-44ff-abad-7c10c72291a5",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +244,9 @@
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "isa_circuit = pm.run(qc)\n",
-    "isa_observables = [operator.apply_layout(isa_circuit.layout) for operator in observables]\n",
+    "isa_observables = [\n",
+    "    operator.apply_layout(isa_circuit.layout) for operator in observables\n",
+    "]\n",
     "\n",
     "# Reshape observable array for broadcasting\n",
     "reshaped_ops = np.fromiter(isa_observables, dtype=object)\n",
@@ -243,7 +258,7 @@
     "exp_val = job.result()[0].data.evs\n",
     "print(result)\n",
     "\n",
-    "# Since the result array is structured as a 2D array where each element is a  \n",
+    "# Since the result array is structured as a 2D array where each element is a\n",
     "# list containing a single value, you need to flatten the array.\n",
     "\n",
     "# Plot using Matplotlib\n",
@@ -252,6 +267,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0e52ff0-96d5-45fb-b5df-38f43fd19ecc",
    "metadata": {},
    "source": [
     "The following cell uses the estimated [standard error](https://en.wikipedia.org/wiki/Standard_error) of each result and adds them as error bars. See the [`bar` plot documentation](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.bar.html) for a full description of the plot."
@@ -260,6 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "6f122049-0b5a-49e8-bde4-d99d91f4b77c",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +304,12 @@
     "standard_error = job.result()[0].data.stds\n",
     "\n",
     "_, ax = plt.subplots()\n",
-    "ax.bar(observables_labels, exp_val.flatten(), yerr=standard_error.flatten(), capsize=2)\n",
+    "ax.bar(\n",
+    "    observables_labels,\n",
+    "    exp_val.flatten(),\n",
+    "    yerr=standard_error.flatten(),\n",
+    "    capsize=2,\n",
+    ")\n",
     "ax.set_title(\"Expectation values (with standard errors)\")"
    ]
   }
@@ -295,7 +317,7 @@
  "metadata": {
   "description": "Plot quantum circuit execution results using Qiskit",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Visualize results"
  },
